adding reverences and fix typo of announcements

--- a/index.html
+++ b/index.html
@@ -194,10 +194,13 @@
             <div class="col-md-3 blog-lib" data="News">
             </div>
 
-            <div class="col-md-3 blog-lib" data="Annoucements">
+            <div class="col-md-3 blog-lib" data="Announcements">
             </div>
 
             <div class="col-md-3 blog-lib" data="Publications">
+            </div>
+	    
+	    <div class="col-md-3 blog-lib" data="References">
             </div>
             
         </div>
