--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
           <h3 class="section-title">OUR ACTIVITY</h3>
           <!-- <p class="section-description">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque</p> -->
         </div>
-        <div class="row">
+        <div class="">
             <!-- 
                 ====== Provide base element to control ======
                 patern:
@@ -191,17 +191,19 @@
             <div class="col-md-3">
             	<div class="text-center" style="font-size: 72px; color: #666666;"><i class="fa fa-newspaper-o"></i></div>
             </div>
-            <div class="col-md-3 blog-lib" data="News">
-            </div>
+		<div class="row">
+		    <div class="col-md-3 blog-lib" data="News">
+		    </div>
 
-            <div class="col-md-3 blog-lib" data="Announcements">
-            </div>
+		    <div class="col-md-3 blog-lib" data="Announcements">
+		    </div>
 
-            <div class="col-md-3 blog-lib" data="Publications">
-            </div>
-	    
-	    <div class="col-md-3 blog-lib" data="References">
-            </div>
+		    <div class="col-md-3 blog-lib" data="Publications">
+		    </div>
+
+		    <div class="col-md-3 blog-lib" data="References">
+		    </div>
+		</div>
             
         </div>
         <script>
