adding aditional css

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <link href="/assets/css/css.css" rel="stylesheet" type="text/css" />
 
   <!-- w3school css style -->
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
